tests/chapter_17/valid/sizeof/sizeof_string.c
int main(void) {
    return sizeof("Hello, World!");
}