tests/chapter_17/invalid_types/void/negate_void.c
int main(void) {
  -(void)10;
  return 0;
}